fixing spacing

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ section p {
 }
 
 .music {
-    grid-gap: 10px;
+    padding: 15px;
 }
 
 footer {
